--- a/labs/kogito.adoc
+++ b/labs/kogito.adoc
@@ -11,9 +11,9 @@ Kogito has multiple uses. Kogito is desgned from ground up to run at scale on cl
 
 ==== Setting up your workspace environment
 
-To get started, access link:http://codeready-crw.apps.cluster-{{ROUTE_URL}}.{{ROUTE_URL}}.example.opentlc.com/[CodeReady Workspaces, window="_blank"]
+* The workshop was designed and tested on the Chrome browser and it is advised to avoid issues that this browser be used wherever possible
 
-open your `crw` project, and open the CodeReady url.
+To get started, open link:http://codeready-crw.apps.cluster-{{ROUTE_URL}}.{{ROUTE_URL}}.example.opentlc.com/[CodeReady Workspaces, window="_blank"].
 
 You may be asked to authorize access. If so, ensure the box to give your user full permissions is checked then select `Allow selected permissions` to continue.
 
