--- a/labs/kogito.adoc
+++ b/labs/kogito.adoc
@@ -15,6 +15,8 @@ Kogito has multiple uses. Kogito is desgned from ground up to run at scale on cl
 
 To get started, open link:https://codeready-crw.apps.cluster-{{ROUTE_URL}}.{{ROUTE_URL}}.example.opentlc.com[https://codeready-crw.apps.cluster-{{ROUTE_URL}}.{{ROUTE_URL}}.example.opentlc.com, window="_blank"]
 
+{{ROUTE_URL}}
+
 You may be asked to authorize access. If so, ensure the box to give your user full permissions is checked then select `Allow selected permissions` to continue.
 
 On the login page, select `Register`. You will have to register a new user before proceeding. Enter the following in the respective fields:
